test/tests/compiler/18_structures/invalid_types/initializers/initialize_struct_with_scalar.plx
pub fn main(none) i32 {
    type struc pair(        x: i32        
        , y: i32        )
    

    #  you can't initialize a struct with a scalar expression
    p: struc pair = 1
}
